# mfem

./: .gitignore  CHANGELOG  CMakeLists.txt  hypre212_square_fix.patch  makefile  merged-branches
examples/: CMakeLists.txt  ex1.cpp  ex10.cpp  ex10p.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex16p.cpp  ex17.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex50.cpp  ex50p.cpp  ex51.cpp  ex51p.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  ex9p.cpp  makefile
fem/: bilinearform.hpp  coefficient.cpp  coefficient.hpp  datacollection.cpp  datacollection.hpp  eltrans.cpp  eltrans.hpp  fe.cpp  fe_coll.cpp  fespace.cpp  fespace.hpp  geom.cpp  geom.hpp  gridfunc.cpp  gridfunc.hpp  nonlinearform.cpp  nonlinearform.hpp  nonlininteg.cpp  nonlininteg.hpp  pfespace.cpp  pfespace.hpp  pnonlinearform.cpp  pnonlinearform.hpp
fem/fe/: fe_base.hpp  fe_nurbs.cpp  fe_nurbs.hpp
general/: array.hpp  optparser.cpp  optparser.hpp
linalg/: blockmatrix.cpp  blockmatrix.hpp  densemat.cpp  densemat.hpp  hypre.cpp  ode.cpp  ode.hpp  operator.hpp  solvers.cpp  solvers.hpp  sparsemat.cpp  vector.cpp  vector.hpp
mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp  mesh_connect.cpp  mesh_connect.dirty.cpp  mesh_readers.cpp  nurbs.cpp  nurbs.hpp  pmesh.cpp
mesh/periodic/: mesh.cpp  mesh.hpp  mesh_connect.cpp  nurbs.cpp
miniapps/: CMakeLists.txt
miniapps/fluids/rbvms/: CMakeLists.txt  README.md  integrator-bak.cpp  integrator-bak.hpp  integrator-diff.cpp  integrator.cpp  integrator.hpp  prbvms.bak  prbvms.cpp  rbvms.cpp
miniapps/meshing/: CMakeLists.txt  mesh-explorer.cpp
miniapps/nurbs/: CMakeLists.txt  makefile  nurbs_ex1.cpp  nurbs_ex24.cpp
miniapps/waves/: CMakeLists.txt  makefile  waves.cpp  wavesp.cpp
tests/unit/: CMakeLists.txt
tests/unit/fem/: test_metric.cpp
